2010-08-04  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04369] Re: w3m's bugs from bugs.debian.org
	* terms.c (graph_ok): fix condition (UseGraphicChar != GRAPHIC_CHAR_DEC)
	* symbol.c (get_symbol): fix condition (UseGraphicChar != GRAPHIC_CHAR_ASCII)
	* rc.c (params1): type of graphic_char option is PI_SEL_C
	* main.c (main): use GRAPHIC_CHAR_ASCII and GRAPHIC_CHAR_DEC instead of FALSE and TRUE
	* fm.h (GRAPHIC_CHAR_ASCII, GRAPHIC_CHAR_DEC, GRAPHIC_CHAR_CHARSET): added

2010-08-03  d+w3m@vdr.jp

	* [w3m-dev 04363] Re: w3m's bugs from bugs.debian.org
	* doc/w3m.1: revert option -S
	* doc-jp/w3m.1: revert option -S, -e, -j and -s
	* main.c: remove codes for Debian

2010-08-03  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04343]
	* file.c (loadGeneralFile): register user name and password for proxy authentication.
	* url.c (HTTPrequest): unused variable seen_proxy_auth was removed
	* fm.h: global variables proxy_auth_cookie and pauth are removed
	* main.c (main): remove option -pauth
	* doc/MANUAL.html: ditto
	* doc-jp/MANUAL.html: ditto
	* doc-jp/w3m.1: ditto
	* doc/w3m.1: ditto
	* doc/README.passwd: added
	* doc-jp/README.passwd: added

2010-07-31  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* [w3m-dev 04350] Re: w3m's bugs from bugs.debian.org
	* file.c (process_img): Revert the change of using ATTR_TITLE if ATTR_ALT is empty.

2010-07-30  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04348] Re: "important" bugs from bugs.debian.org
	* file.c (TEXTAREA_ATTR_COL_MAX, TEXTAREA_ATTR_ROWS_MAX): added.
	(process_textarea): check cur_textarea_size > TEXTAREA_ATTR_COL_MAX and cur_textarea_rows > TEXTAREA_ATTR_ROWS_MAX

2010-07-30  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04345] Re: "important" bugs from bugs.debian.org
	* file.c (HR_ATTR_WIDTH_MAX): added.
	(process_hr): check w > HR_ATTR_WIDTH_MAX

2010-07-26  d+w3m@vdr.jp

	* [w3m-dev 04237] [patch] cookie avoid [wrong number of dots]
	* rc.c: Introduce option cookie_avoid_wrong_number_of_dots.